--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container container-center">
-    <h1 class="heading">Cash Register</h1>
+    <h1 class="heading"><a href="index.html">Cash Register</a></h1>
     <p class="desciption">Enter bill amount and cash amount and get idea on mimimum notes to be return to customer </p>
     
     <label for="bill-amount">Bill Amount</label>
