--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <p>© | 2022 | yoursweetnightmare</p>
     <ul class="list-non-bullet">
         <li class="list-item-inline" ><a class="link" href="https://github.com/Rakezt">github</a> </li>
-        <li class="list-item-inline" ><a class="link" href="https://app.netlify.com/teams/rakezt-kpd99xk/overview">netlify</a></li>
-        <li class="list-item-inline" ><a class="link" href="https://www.linkedin.com/feed/">linkedin</a></li>
-    </ul>
+        <li class="list-item-inline"><a class="link"
+            href="https://twitter.com/LRakeshSingh">twitter</a></li>
+        <li class="list-item-inline" ><a class="link" href="https://www.linkedin.com/in/lrakeshsingh/">linkedin</a></li>
+     </ul>
    </footer>
 </div>
 <script src="script.js"></script>
